--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,11 +10,16 @@
     <ion-row>
         <ion-col>
             <ion-list>
-                <ion-item *ngFor="let item of students; let i= index">
-                    <ion-label>
-                        {{item.name}}
-                    </ion-label>
-                </ion-item>
+                <ion-item-sliding *ngFor="let item of students; let i=index">
+                    <ion-item>
+                        <ion-label>{{item.name}}</ion-label>
+                    </ion-item>
+                    <ion-item-options side="end" (ionSwipe)="removeStudent(i)">
+                        <ion-item-option expandable color="danger">
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </ion-item-option>
+                    </ion-item-options>
+                </ion-item-sliding>
             </ion-list>
         </ion-col>
     </ion-row>
