--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
     <ion-toolbar>
         <ion-title>
-            Blank
+            Lista de estudiantes
         </ion-title>
     </ion-toolbar>
 </ion-header>
@@ -11,14 +11,27 @@
         <ion-col>
             <ion-list>
                 <ion-item-sliding *ngFor="let item of students; let i=index">
-                    <ion-item>
-                        <ion-label>{{item.name}}</ion-label>
+                    <ion-item (click)="getStudentByControlNumber(item.controlnumber)">
+                        <ion-label>
+                            <strong>{{item.name}}</strong>
+                            <ion-chip color="primary" outline="true" class="ion-float-right">
+                                <ion-label>{{item.career}}</ion-label>
+                            </ion-chip>
+                            <h4>
+                                {{item.controlnumber}}
+                            </h4>
+                        </ion-label>
                     </ion-item>
                     <ion-item-options side="end" (ionSwipe)="removeStudent(i)">
                         <ion-item-option expandable color="danger">
                             <ion-icon name="trash-outline"></ion-icon>
                         </ion-item-option>
                     </ion-item-options>
+                    <!-- <ion-item-options side="start" (ionSwipe)="getStudentByControlNumber(item.controlnumber)">
+                        <ion-item-option expandable color="primary">
+                            <ion-icon name="person-circle-outline"></ion-icon>
+                        </ion-item-option>
+                    </ion-item-options> -->
                 </ion-item-sliding>
             </ion-list>
         </ion-col>
