--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -33,7 +33,14 @@
                         </ion-item-option>
                     </ion-item-options> -->
                 </ion-item-sliding>
+
             </ion-list>
         </ion-col>
+
     </ion-row>
+    <ion-fab slot="fixed" vertical="top" horizontal="end" [edge]="true">
+        <ion-fab-button (click)="goToNewStudent()">
+            <ion-icon name="add"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
 </ion-content>
